# figma-api

./: .gitignore  CONTRIBUTING.md  README.md
figma_rest_api_file/: Cargo.toml  README.md
figma_rest_api_file/.openapi-generator/: FILES
figma_rest_api_file/docs/: BackgroundBlurEffect.md  BaseBlurEffect.md  BaseNoiseEffect.md  BasePaint.md  BaseTypeStyle.md  BlurEffect.md  BooleanOperationNode.md  CanvasNode.md  ColorStop.md  Comment.md  CommentClientMeta.md  CommentFragment.md  Component.md  ComponentNode.md  ComponentPropertyDefinition.md  ComponentPropertyDefinitionDefaultValue.md  ComponentPropertyType.md  ComponentSet.md  ComponentSetNode.md  ComponentSetsApi.md  ComponentsApi.md  ConditionalAction.md  ConditionalBlock.md  ConnectorEndpoint.md  ConnectorEndpointOneOf1.md  ConnectorLineType.md  ConnectorNode.md  ConnectorTextBackground.md  Constraint.md  CornerRadiusShapeTraits.md  CornerTrait.md  DefaultShapeTraits.md  DirectionalTransition.md  DocumentNode.md  DocumentationLink.md  DropShadowEffect.md  DuotoneNoiseEffect.md  Easing.md  EasingEasingFunctionCubicBezier.md  EditorType.md  (+146 more)
figma_rest_api_file/src/apis/: component_sets_api.rs  components_api.rs  files_api.rs  mod.rs  styles_api.rs
figma_rest_api_file/src/models/: arc_data.rs  background_blur_effect.rs  bad_request_error_response_with_error_boolean.rs  base_blur_effect.rs  base_blur_effect_bound_variables.rs  base_noise_effect.rs  boolean_operation_node.rs  canvas_node.rs  color_stop.rs  color_stop_bound_variables.rs  comment.rs  comment_client_meta.rs  component.rs  component_node.rs  component_property_bound_variables.rs  component_property_definition.rs  component_set_node.rs  connector_endpoint.rs  connector_line_type.rs  connector_node.rs  connector_text_background.rs  corner_radius_shape_traits.rs  default_shape_traits.rs  document_node.rs  documentation_link.rs  drop_shadow_effect.rs  duotone_noise_effect.rs  easing_easing_function_cubic_bezier.rs  easing_type.rs  editor_type.rs  effect.rs  ellipse_node.rs  embed_node.rs  export_setting.rs  expression.rs  expression_function.rs  flow_starting_point.rs  frame_info_containing_component_set.rs  frame_node.rs  (+143 more)
figma_rest_api_file/tests/: files_api_integration.rs  serialization_test.rs
(+283 files in other folders)
